--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -19,10 +19,10 @@ msgstr ""
 "Generated-By: Babel 2.10.1\n"
 
 #: 3-app.py:34
-msgid "home_title"
+msgid "Welcome to Holberton"
 msgstr "Welcome to Holberton"
 
 #: 3-app.py:35
-msgid "home_header"
+msgid "Hello world!"
 msgstr "Hello world!"
 
