--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -18,11 +18,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.10.1\n"
 
-#: 3-app.py:34
-msgid "Welcome to Holberton"
+msgid "home_title"
 msgstr "Welcome to Holberton"
 
-#: 3-app.py:35
-msgid "Hello world!"
+msgid "home_header"
 msgstr "Hello world!"
 
